--- a/sqlmake/sqlmake.csproj
+++ b/sqlmake/sqlmake.csproj
@@ -48,6 +48,7 @@
         <Compile Include="Logger.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="ThreadLoadFile.cs" />
         <Compile Include="ThreadLogFile.cs" />
     </ItemGroup>
     <ItemGroup>
